--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .main-content p{
-    line-height: 1.2;
+    line-height: 1.5;
 }
 
 .main-content-article{
@@ -124,9 +124,48 @@ h1, h2, h3, h4, h5, h6{
 
 .main-content-title{
     letter-spacing: .2em;
-    text-align: center;
+    text-align: left;
     font-size: 1.25em;
     color: #652e78;
     text-transform: uppercase;
     font-weight: normal;
 }
+
+/* Formatar e estilizar o Rodapé*/
+
+.hidden{
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    opacity: 0;
+    display: block;
+}
+
+.footer{
+    background: #25303e;
+    color: #83969f;
+    text-align: center;
+    padding-bottom: 2em;
+}
+
+.footer-menushare{
+    background: #303d4c;
+    padding: .5em;
+}
+/* Formata os icones do Rodapé*/
+
+.footer-menushare li{
+    display: inline-block; /* Alinha de forma horizontal */
+    margin:  0 1em; /* Adiciona espaçamento entre os icones*/
+} 
+
+.footer-menushare a {
+    font-size: 1.3em;
+    text-decoration: none;
+    color: white;
+}
+
+.footer-copyright{
+    font-weight: bold;
+}
+
